--- a/css/indec.html
+++ b/css/indec.html
@@ -79,15 +79,279 @@
 						<li>ÁO KHOÁC</li>
 						<li>ÁO NỈ</li>
 					</ul>
-
 				</div>
-
 			</div>
 			<div class="product-content">
-				<div class="product-list">
+				<div class="product-list ao">
 					<div class="product-block">
-						
+						<div class="product-img">
+							<img src="D:\html\bai ktr cuoi khoa\data-20250921T024827Z-1-001\data\AKBBR Bomber logo vai burberry eddison 8061650.jpg"
+								alt="">
+						</div>
+						<div class="product-info">
+							<p>ALDO DIOR OBilique</p>
+							<strong>26,800,000</strong>
+						</div>
+					</div>
+					<div class="product-block">
+						<div class="product-img">
+							<img src="D:\html\bai ktr cuoi khoa\data-20250921T024827Z-1-001\data\AKBBR sussex jacket 8070347 check camel.jpg"
+								alt="">
+						</div>
+						<div class="product-info">
+							<p>BURBERRUY</p>
+							<strong>26,800,000</strong>
+						</div>
+					</div>
+					<div class="product-block">
+						<div class="product-img">
+							<img src="D:\html\bai ktr cuoi khoa\data-20250921T024827Z-1-001\data\AKDSQ Dsquared2 bomber all black s71an0500.jpg"
+								alt="">
+						</div>
+						<div class="product-info">
+							<p>Dsquared2</p>
+							<strong>27,000,000</strong>
+						</div>
 
+					</div>
+					<div class="product-block">
+						<div class="product-img">
+							<img src="D:\html\bai ktr cuoi khoa\data-20250921T024827Z-1-001\data\AKGVC Bomber Givenchy teddy BM00D04Y1L 004.jpg"
+								alt="">
+						</div>
+						<div class="product-info">
+							<p>Bomber</p>
+							<strong>28,000,000</strong>
+						</div>
+					</div>
+
+					<div class="product-block">
+						<div class="product-img">
+							<img src="D:\html\bai ktr cuoi khoa\data-20250921T024827Z-1-001\data\AKTB Bomber Thom Browne 4 Bar MJO030A 06146.jpg"
+								alt="">
+						</div>
+						<div class="product-info">
+							<p>Thom Browne</p>
+							<strong>26,500,000</strong>
+						</div>
+					</div>
+				</div>
+
+				<div class="product-list ao-phong">
+					<div class="product-block">
+						<div class="product-img">
+							<img src="D:\html\bai ktr cuoi khoa\Ao\Áo Phông\APDSQ s74gd1135 surf beach.jpg" alt="">
+						</div>
+						<div class="product-info">
+							<p>ALDO DIOR OBilique</p>
+							<strong>26,800,000</strong>
+						</div>
+					</div>
+					<div class="product-block">
+						<div class="product-img">
+							<img src="D:\html\bai ktr cuoi khoa\data-20250921T024827Z-1-001\data\AKBBR sussex jacket 8070347 check camel.jpg"
+								alt="">
+						</div>
+						<div class="product-info">
+							<p>BURBERRUY</p>
+							<strong>26,800,000</strong>
+						</div>
+					</div>
+					<div class="product-block">
+						<div class="product-img">
+							<img src="D:\html\bai ktr cuoi khoa\data-20250921T024827Z-1-001\data\AKDSQ Dsquared2 bomber all black s71an0500.jpg"
+								alt="">
+						</div>
+						<div class="product-info">
+							<p>Dsquared2</p>
+							<strong>27,000,000</strong>
+						</div>
+
+					</div>
+					<div class="product-block">
+						<div class="product-img">
+							<img src="D:\html\bai ktr cuoi khoa\data-20250921T024827Z-1-001\data\AKGVC Bomber Givenchy teddy BM00D04Y1L 004.jpg"
+								alt="">
+						</div>
+						<div class="product-info">
+							<p>Bomber</p>
+							<strong>28,000,000</strong>
+						</div>
+					</div>
+
+					<div class="product-block">
+						<div class="product-img">
+							<img src="D:\html\bai ktr cuoi khoa\data-20250921T024827Z-1-001\data\AKTB Bomber Thom Browne 4 Bar MJO030A 06146.jpg"
+								alt="">
+						</div>
+						<div class="product-info">
+							<p>Thom Browne</p>
+							<strong>26,500,000</strong>
+						</div>
+					</div>
+				</div>
+
+				<div class="product-list ao-so-mi">
+					<div class="product-block">
+						<div class="product-img">
+							<img src="D:\html\bai ktr cuoi khoa\Ao\Sơ mi\SMBBR Burberry london check cân kẻ nhỏ 8020966.jpg"alt="">
+						</div>
+						<div class="product-info">
+							<p>ALDO DIOR OBilique</p>
+							<strong>26,800,000</strong>
+						</div>
+					</div>
+					<div class="product-block">
+						<div class="product-img">
+							<img src="D:\html\bai ktr cuoi khoa\data-20250921T024827Z-1-001\data\AKBBR sussex jacket 8070347 check camel.jpg"
+								alt="">
+						</div>
+						<div class="product-info">
+							<p>BURBERRUY</p>
+							<strong>26,800,000</strong>
+						</div>
+					</div>
+					<div class="product-block">
+						<div class="product-img">
+							<img src="D:\html\bai ktr cuoi khoa\data-20250921T024827Z-1-001\data\AKDSQ Dsquared2 bomber all black s71an0500.jpg"
+								alt="">
+						</div>
+						<div class="product-info">
+							<p>Dsquared2</p>
+							<strong>27,000,000</strong>
+						</div>
+
+					</div>
+					<div class="product-block">
+						<div class="product-img">
+							<img src="D:\html\bai ktr cuoi khoa\data-20250921T024827Z-1-001\data\AKGVC Bomber Givenchy teddy BM00D04Y1L 004.jpg"
+								alt="">
+						</div>
+						<div class="product-info">
+							<p>Bomber</p>
+							<strong>28,000,000</strong>
+						</div>
+					</div>
+
+					<div class="product-block">
+						<div class="product-img">
+							<img src="D:\html\bai ktr cuoi khoa\data-20250921T024827Z-1-001\data\AKTB Bomber Thom Browne 4 Bar MJO030A 06146.jpg"
+								alt="">
+						</div>
+						<div class="product-info">
+							<p>Thom Browne</p>
+							<strong>26,500,000</strong>
+						</div>
+					</div>
+				</div>
+
+				<div class="product-list ao-khoac">
+					<div class="product-block">
+						<div class="product-img">
+							<img src="D:\html\bai ktr cuoi khoa\data-20250921T024827Z-1-001\data\AKBBR Bomber logo vai burberry eddison 8061650.jpg"
+								alt="">
+						</div>
+						<div class="product-info">
+							<p>ALDO DIOR OBilique</p>
+							<strong>26,800,000</strong>
+						</div>
+					</div>
+					<div class="product-block">
+						<div class="product-img">
+							<img src="D:\html\bai ktr cuoi khoa\data-20250921T024827Z-1-001\data\AKBBR sussex jacket 8070347 check camel.jpg"
+								alt="">
+						</div>
+						<div class="product-info">
+							<p>BURBERRUY</p>
+							<strong>26,800,000</strong>
+						</div>
+					</div>
+					<div class="product-block">
+						<div class="product-img">
+							<img src="D:\html\bai ktr cuoi khoa\data-20250921T024827Z-1-001\data\AKDSQ Dsquared2 bomber all black s71an0500.jpg"
+								alt="">
+						</div>
+						<div class="product-info">
+							<p>Dsquared2</p>
+							<strong>27,000,000</strong>
+						</div>
+
+					</div>
+					<div class="product-block">
+						<div class="product-img">
+							<img src="D:\html\bai ktr cuoi khoa\data-20250921T024827Z-1-001\data\AKGVC Bomber Givenchy teddy BM00D04Y1L 004.jpg"
+								alt="">
+						</div>
+						<div class="product-info">
+							<p>Bomber</p>
+							<strong>28,000,000</strong>
+						</div>
+					</div>
+
+					<div class="product-block">
+						<div class="product-img">
+							<img src="D:\html\bai ktr cuoi khoa\data-20250921T024827Z-1-001\data\AKTB Bomber Thom Browne 4 Bar MJO030A 06146.jpg"
+								alt="">
+						</div>
+						<div class="product-info">
+							<p>Thom Browne</p>
+							<strong>26,500,000</strong>
+						</div>
+					</div>
+				</div>
+
+				<div class="product-list ao-ni">
+					<div class="product-block">
+						<div class="product-img">
+							<img src="D:\html\bai ktr cuoi khoa\data-20250921T024827Z-1-001\data\AKBBR Bomber logo vai burberry eddison 8061650.jpg"
+								alt="">
+						</div>
+						<div class="product-info">
+							<p>ALDO DIOR OBilique</p>
+							<strong>26,800,000</strong>
+						</div>
+					</div>
+					<div class="product-block">
+						<div class="product-img">
+							<img src="D:\html\bai ktr cuoi khoa\data-20250921T024827Z-1-001\data\AKBBR sussex jacket 8070347 check camel.jpg"
+								alt="">
+						</div>
+						<div class="product-info">
+							<p>BURBERRUY</p>
+							<strong>26,800,000</strong>
+						</div>
+					</div>
+					<div class="product-block">
+						<div class="product-img">
+							<img src="D:\html\bai ktr cuoi khoa\data-20250921T024827Z-1-001\data\AKDSQ Dsquared2 bomber all black s71an0500.jpg"
+								alt="">
+						</div>
+						<div class="product-info">
+							<p>Dsquared2</p>
+							<strong>27,000,000</strong>
+						</div>
+
+					</div>
+					<div class="product-block">
+						<div class="product-img">
+							<img src="D:\html\bai ktr cuoi khoa\data-20250921T024827Z-1-001\data\AKGVC Bomber Givenchy teddy BM00D04Y1L 004.jpg"
+								alt="">
+						</div>
+						<div class="product-info">
+							<p>Bomber</p>
+							<strong>28,000,000</strong>
+						</div>
+					</div>
+
+					<div class="product-block">
+						<div class="product-img">
+							<img src="D:\html\bai ktr cuoi khoa\data-20250921T024827Z-1-001\data\AKTB Bomber Thom Browne 4 Bar MJO030A 06146.jpg"
+								alt="">
+						</div>
+						<div class="product-info">
+							<p>Thom Browne</p>
+							<strong>26,500,000</strong>
+						</div>
 					</div>
 				</div>
 
@@ -95,45 +359,44 @@
 		</section>
 	</div>
 
-
-	<!-- <footer>
-		<div class="footer-container">
-			<div class="footer-col">
-				<h3>HỖ TRỢ KHÁCH HÀNG</h3>
-				<ul>
-					<li><a href="#">Hướng dẫn đặt hàng</a></li>
-					<li><a href="#">Hướng dẫn chọn size</a></li>
-					<li><a href="#">Hướng dẫn bảo quản</a></li>
-					<li><a href="#">Chính sách đổi trả</a></li>
-					<li><a href="#">Chính sách bảo mật</a></li>
-
-				</ul>
-			</div>
-
-			<div class="footer-col">
-				<h3>VỀ CHÚNG TÔI</h3>
-				<ul>
-					<li><a href="#">Giới thiệu</a></li>
-					<li><a href="#">Hệ thống cửa hàng</a></li>
-
-				</ul>
-			</div>
-
-			<div class="footer-col">
-				<h3>LIÊN HỆ</h3>
-				<ul>	
-					<li><a href="#">Facebook</a></li>
-					<li><a href="#">Instagram</a></li>
-				</ul>
-			</div>
-
-		</div>
-		<iframe
-			src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d5672.9232547370675!2d105.8447227!3d21.0420866!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3135abba0e4da77b%3A0x60f09627677f54dc!2zNTMgUC4gTmd1eeG7hW4gVHLGsOG7nW5nIFThu5ksIFRyw7pjIELhuqFjaCwgQmEgxJDDrG5oLCBIw6AgTuG7mWk!5e1!3m2!1svi!2s!4v1758117046669!5m2!1svi!2s"
-			width="800" height="350" style="border:0;" allowfullscreen="" loading="lazy"
-			referrerpolicy="no-referrer-when-downgrade"></iframe>
-	</footer> -->
 </body>
+<!-- <footer>
+	<div class="footer-container">
+		<div class="footer-col">
+			<h3>HỖ TRỢ KHÁCH HÀNG</h3>
+			<ul>
+				<li><a href="#">Hướng dẫn đặt hàng</a></li>
+				<li><a href="#">Hướng dẫn chọn size</a></li>
+				<li><a href="#">Hướng dẫn bảo quản</a></li>
+				<li><a href="#">Chính sách đổi trả</a></li>
+				<li><a href="#">Chính sách bảo mật</a></li>
+
+			</ul>
+		</div>
+
+		<div class="footer-col">
+			<h3>VỀ CHÚNG TÔI</h3>
+			<ul>
+				<li><a href="#">Giới thiệu</a></li>
+				<li><a href="#">Hệ thống cửa hàng</a></li>
+
+			</ul>
+		</div>
+
+		<div class="footer-col">
+			<h3>LIÊN HỆ</h3>
+			<ul>
+				<li><a href="#">Facebook</a></li>
+				<li><a href="#">Instagram</a></li>
+			</ul>
+		</div>
+
+	</div>
+	<iframe
+		src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d5672.9232547370675!2d105.8447227!3d21.0420866!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3135abba0e4da77b%3A0x60f09627677f54dc!2zNTMgUC4gTmd1eeG7hW4gVHLGsOG7nW5nIFThu5ksIFRyw7pjIELhuqFjaCwgQmEgxJDDrG5oLCBIw6AgTuG7mWk!5e1!3m2!1svi!2s!4v1758117046669!5m2!1svi!2s"
+		width="800" height="350" style="border:0;" allowfullscreen="" loading="lazy"
+		referrerpolicy="no-referrer-when-downgrade"></iframe>
+</footer> -->
 
 <script>
 	const slideContainer = document.querySelector('.slide');
